force-app/main/default/objects/OfficeRequest__c/OfficeRequest__c.object-meta.xml
<CustomObject>
    <description>Custom object to save requests records.</description>
    <label>OfficeRequest</label>
    <nameField>
        <label>OfficeRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OfficeRequests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>