force-app/main/default/objects/OfficeRequest__c/fields/Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Time__c</fullName>
    <label>Entry Time</label>
    <type>Time</type>
</CustomField>