force-app/main/default/objects/OfficeRequest__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Office selected.</description>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>OfficeRequests</relationshipLabel>
    <relationshipName>OfficeRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>