force-app/main/default/objects/OfficeRequest__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequestedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>